# Fagprojekt_DayTrading

./: .gitignore
Fagprojekt_DayTrading/: .gitignore  LICENSE  README.md  pyproject.toml  tasks.py
Fagprojekt_DayTrading/.devcontainer/: devcontainer.json
Fagprojekt_DayTrading/dockerfiles/: api.dockerfile  train.dockerfile
Fagprojekt_DayTrading/docs/: generate_architecture_docs.py  mkdocs.yaml
Fagprojekt_DayTrading/docs/source/: index.md
Fagprojekt_DayTrading/src/kvant/: __init__.py  labelling.py  labels.py  train.py
Fagprojekt_DayTrading/src/kvant/kdata/: data_vectorbt_example.py  hf_download_utils.py  hf_minute_data.py
Fagprojekt_DayTrading/src/kvant/kmarket_info/: is_nyse_open.py
Fagprojekt_DayTrading/src/kvant/ml_framework/: __init__.py
Fagprojekt_DayTrading/src/kvant/ml_framework/logging/: wandb_logger.py
Fagprojekt_DayTrading/src/kvant/ml_framework/models/: __init__.py  conv1d.py
Fagprojekt_DayTrading/src/kvant/ml_framework/scripts/: train_experiment.py
Fagprojekt_DayTrading/src/kvant/ml_framework/train/: __init__.py  classification_metrics.py  evaluator.py  metrics.py  predict.py  trading_metrics.py  trainer.py  utils.py
Fagprojekt_DayTrading/src/kvant/ml_prepare_data/: __init__.py  data_loading.py  data_loading_utils.py  dataset_preparation_utils.py  prepare_experiment.py  reporting.py
Fagprojekt_DayTrading/src/kvant/ml_prepare_data/features/: feature_engineering.py
Fagprojekt_DayTrading/src/kvant/ml_prepare_data/labelling/: tripple_bar.py
Fagprojekt_DayTrading/src/kvant/ml_prepare_data/plot_labelling/: vary_labeller_runs.py  (+1 more)
Fagprojekt_DayTrading/tests/: test_data.py  test_model.py  test_trading_metrics.py
(+11 files in other folders)
